fix: navigation menu fix on small screen

--- a/sass/components/_get-a-quote.scss
+++ b/sass/components/_get-a-quote.scss
@@ -34,6 +34,8 @@
     @include media-tablet {
         margin-left: 30px;
         margin-right: 30px;
+        margin-bottom: 0px;
+        padding-bottom: 42px;
     }
 }
 
