--- a/sass/style.css
+++ b/sass/style.css
@@ -651,7 +651,7 @@ ul {
 .slide2 {
   height: calc(100vw * 0.58);
   max-height: 594px;
-  border-bottom: 6px solid #648BF0;
+  border-bottom: calc(100vw * 0.006) solid #648BF0;
 }
 
 .phones__slide2 {
@@ -663,7 +663,7 @@ ul {
   height: calc(100vw * 0.58);
   max-height: 594px;
   background-color: #f06c64;
-  border-bottom: 6px solid #ea676b;
+  border-bottom: calc(100vw * 0.006) solid #ea676b;
 }
 
 .current,
@@ -1230,6 +1230,8 @@ ul {
   #form {
     margin-left: 30px;
     margin-right: 30px;
+    margin-bottom: 0px;
+    padding-bottom: 42px;
   }
 }
 
@@ -1590,7 +1592,13 @@ textarea::placeholder {
 }
 @media (max-width: 1019px) {
   .portfolio__wrapper {
+    border-bottom: 7.6px solid #323746;
     top: 71px;
+  }
+}
+@media (max-width: 767px) {
+  .portfolio__wrapper {
+    border-bottom: none;
   }
 }
 
@@ -1622,6 +1630,11 @@ textarea::placeholder {
     top: 71px;
   }
 }
+@media (max-width: 767px) {
+  .get-a-quote__wrapper {
+    border-bottom: none;
+  }
+}
 
 .footer__wrapper {
   height: 76px;
@@ -1638,6 +1651,11 @@ textarea::placeholder {
 .yakor {
   position: absolute;
   top: -95px;
+}
+@media (max-width: 1019px) {
+  .yakor {
+    top: -71px;
+  }
 }
 
 .layout-2-col {
